# strusAnalyzer

./: .gitignore  .travis.yml  CHANGELOG  CMakeLists.txt  CONTRIBUTORS  COPYING  GNUmakefile  INSTALL  INSTALL.3rdParty  INSTALL.FreeBSD  INSTALL.OSX  INSTALL.OpenBSD  INSTALL.Ubuntu.md  LICENSE.3rdParty  README  README.md  TODO  variables.mk
cmake/: boost.cmake  (+2 more)
src/: CMakeLists.txt  GNUmakefile
src/aggregator_exist/: CMakeLists.txt  libstrus_aggregator_exist.cpp
src/aggregator_set/: CMakeLists.txt  libstrus_aggregator_set.cpp
src/aggregator_vsm/: CMakeLists.txt  libstrus_aggregator_vsm.cpp
src/analyzer/: CMakeLists.txt  GNUmakefile  analyzer.cpp  analyzer.hpp  analyzerLib.cpp  bindTerm.cpp  bindTerm.hpp  documentAnalyzer.cpp  documentAnalyzer.hpp  documentAnalyzerContext.cpp  documentAnalyzerContext.hpp  documentAnalyzerInstance.cpp  documentAnalyzerInstance.hpp  documentAnalyzerIntrospection.cpp  documentAnalyzerIntrospection.hpp  documentAnalyzerMap.cpp  documentAnalyzerMap.hpp  featureConfig.cpp  featureConfig.hpp  featureConfigIntrospection.cpp  featureConfigIntrospection.hpp  featureConfigMap.cpp  featureConfigMap.hpp  featureContextMap.cpp  featureContextMap.hpp  libstrus_analyzer.cpp  libstrus_analyzer_objbuild.cpp  normalizerDef.cpp  normalizerDef.hpp  patternFeatureConfig.cpp  patternFeatureConfig.hpp  patternFeatureConfigMap.cpp  patternFeatureConfigMap.hpp  patternFeatureContextMap.cpp  patternFeatureContextMap.hpp  patternMatchConfig.hpp  patternMatchConfigMap.cpp  patternMatchConfigMap.hpp  patternMatchContextMap.cpp  patternMatchContextMap.hpp  (+9 more)
src/contentstat/: CMakeLists.txt  contentStatistics.cpp  contentStatistics.hpp  contentStatisticsData.hpp  contentStatisticsLibrary.cpp  contentStatisticsLibrary.hpp  libstrus_contentstats_std.cpp
src/detector_std/: CMakeLists.txt  detectDocumentType.cpp  detectDocumentType.hpp  libstrus_detector_std.cpp  standardDocumentClassDetector.cpp  standardDocumentClassDetector.hpp
src/doctree/: CMakeLists.txt  libstrus_doctree.cpp
src/markup/: CMakeLists.txt  libstrus_markup_std.cpp  tokenMarkup.cpp  tokenMarkup.hpp
src/markuptags/: CMakeLists.txt  libstrus_markup_document_tags.cpp
src/normalizer_charconv/: CMakeLists.txt  libstrus_normalizer_charconv.cpp  normalizerCharConv.cpp  normalizerCharConv.hpp
src/normalizer_dateconv/: CMakeLists.txt  libstrus_normalizer_dateconv.cpp  normalizerDateConv.cpp  normalizerDateConv.hpp
src/normalizer_decode/: CMakeLists.txt  libstrus_normalizer_decode.cpp  normalizerDecode.cpp  normalizerDecode.hpp
src/normalizer_dictmap/: CMakeLists.txt  libstrus_normalizer_dictmap.cpp  normalizerDictMap.cpp  normalizerDictMap.hpp
src/normalizer_entityid/: CMakeLists.txt  libstrus_normalizer_entityid.cpp
src/normalizer_ngram/: CMakeLists.txt  libstrus_normalizer_ngram.cpp  normalizerNgram.cpp  normalizerNgram.hpp
src/normalizer_regex/: CMakeLists.txt  libstrus_normalizer_regex.cpp  normalizerRegex.cpp  normalizerRegex.hpp
src/normalizer_snowball/: CMakeLists.txt  GNUmakefile  libstrus_normalizer_snowball.cpp  snowball.cpp  snowball.hpp
src/normalizer_substrindex/: CMakeLists.txt  libstrus_normalizer_substrindex.cpp  normalizer_substrindex.cpp  normalizer_substrindex.hpp
src/normalizer_trim/: CMakeLists.txt  libstrus_normalizer_trim.cpp  normalizer_trim.cpp  normalizer_trim.hpp
src/normalizer_wordjoin/: CMakeLists.txt  libstrus_normalizer_wordjoin.cpp  normalizer_wordjoin.cpp  normalizer_wordjoin.hpp
src/normalizer_wordmap/: CMakeLists.txt  libstrus_normalizer_wordmap.cpp  normalizerWordMap.cpp  normalizerWordMap.hpp
src/pattern/: CMakeLists.txt  libstrus_pattern_resultformat.cpp  libstrus_pattern_serialize.cpp  libstrus_pattern_termfeeder.cpp  libstrus_pattern_test.cpp  patternLexer.cpp  patternLexer.hpp  patternMatcher.cpp  patternMatcher.hpp
src/postagger/: CMakeLists.txt  libstrus_postagger_std.cpp  posTagger.cpp  posTagger.hpp  posTaggerContext.cpp  posTaggerContext.hpp  posTaggerData.cpp  posTaggerData.hpp  posTaggerInstance.cpp  posTaggerInstance.hpp  posTaggingMarkup.cpp  posTaggingMarkup.hpp  strusPosTagger.cpp
src/prgload_std/: CMakeLists.txt  libstrus_analyzer_prgload_std.cpp  patternMatchProgramParser.cpp  patternMatchProgramParser.hpp  programLoader.cpp  programLoader.hpp
src/segmenter_cjson/: CMakeLists.txt  cjson2textwolf.cpp  cjson2textwolf.hpp  contentIterator.cpp  contentIterator.hpp  jsonParser.cpp  jsonParser.hpp  libstrus_segmenter_cjson.cpp  segmenter.cpp  segmenter.hpp  segmenterContext.cpp  segmenterContext.hpp
src/segmenter_plain/: CMakeLists.txt  libstrus_segmenter_plain.cpp  segmenter.cpp  segmenter.hpp  segmenterContext.cpp  segmenterContext.hpp
src/segmenter_textwolf/: CMakeLists.txt  GNUmakefile  contentIterator.hpp  libstrus_markup_document_tags.cpp  libstrus_segmenter_textwolf.cpp  segmenter.cpp  segmenter.hpp  segmenterContext.cpp  segmenterContext.hpp  segmenterInstance.cpp  segmenterInstance.hpp  segmenterLib.cpp  segmenterMarkupContext.hpp
src/segmenter_tsv/: CMakeLists.txt  libstrus_segmenter_tsv.cpp  tsvSegmenter.cpp  tsvSegmenter.hpp
src/segmenter_utils/: CMakeLists.txt  xpathAutomaton.cpp
src/strusAnalyze/: GNUmakefile  strusAnalyze.cpp
src/strusAnalyzer/: GNUmakefile  strusAnalyzer.cpp
src/strusInsert/: GNUmakefile  strusInsert.cpp
src/strusInserter/: GNUmakefile  strusInserter.cpp
src/strusQuery/: GNUmakefile  strusQuery.cpp
src/system/: GNUmakefile  fileio.cpp
src/textproc/: CMakeLists.txt  GNUmakefile  libstrus_textproc.cpp  resourceDirectory.hpp  resourceDirectory.hpp.in  textProcessor.cpp  textProcessor.hpp
src/textprocessor/: GNUmakefile  textProcessor.cpp
src/tokenizer_punctuation/: CMakeLists.txt  GNUmakefile  libstrus_tokenizer_punctuation.cpp  punctuation.cpp  punctuation.hpp  punctuation_de.cpp  punctuation_de.hpp  punctuation_en.cpp  punctuation_en.hpp  punctuation_utils.hpp
src/tokenizer_regex/: CMakeLists.txt  libstrus_tokenizer_regex.cpp  tokenizerRegex.cpp  tokenizerRegex.hpp
src/tokenizer_textcat/: CMakeLists.txt  libstrus_tokenizer_textcat.cpp
tests/: CMakeLists.txt  GNUmakefile
(+829 files in other folders)
