cmake_minimum_required(VERSION 2.8 FATAL_ERROR)

add_subdirectory( utils )
add_subdirectory( normalizer_snowball )
add_subdirectory( normalizer_charconv )
add_subdirectory( normalizer_dictmap )
add_subdirectory( normalizer_dateconv )
add_subdirectory( normalizer_ngram )
add_subdirectory( normalizer_regex )
add_subdirectory( normalizer_wordjoin )
add_subdirectory( segmenter_utils )
add_subdirectory( segmenter_textwolf )
add_subdirectory( segmenter_cjson )
add_subdirectory( segmenter_tsv )
add_subdirectory( detector_std )
add_subdirectory( tokenizer_punctuation )
add_subdirectory( tokenizer_word )
add_subdirectory( tokenizer_regex )
add_subdirectory( tokenizer_textcat )
add_subdirectory( aggregator_vsm )
add_subdirectory( markup )
add_subdirectory( textproc )
add_subdirectory( analyzer )
add_subdirectory( pattern )

